syntax = "proto3";

package ru.otus.protobuf.generated;

option java_multiple_files = true;

message UserMessage {
    int64 id = 1;
    string firstName = 2;
    string lastName = 3;
}

message Empty {}

service RemoteDBService {
    rpc saveUser(UserMessage) returns (UserMessage);
    rpc findAllUsers(Empty) returns (stream UserMessage);
}
